Fixed height on mobile

--- a/index.css
+++ b/index.css
@@ -16,15 +16,9 @@
   --padding: 10px;
 }
 
-html {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  position: relative;
-  width: 100%;
-  height: 100%;
+html, body {
+  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
